package pattern;

public class ConcreteProduct implements Product {
    public String name() { return "documento PDF"; }
}
