@startuml
title Factory Method - clases
interface Product {
  +operation(): String
}
class ConcreteProduct
abstract class Creator {
  +someOperation()
  #factoryMethod(): Product
}
class ConcreteCreator
Product <|.. ConcreteProduct
Creator <|-- ConcreteCreator
Creator ..> Product : usa abstraccion
ConcreteCreator ..> ConcreteProduct : crea
note right of Creator
Creator define el algoritmo general.
La subclase decide el producto concreto.
end note
@enduml

@startuml
title Factory Method - interaccion
participant Client
participant "creator: Creator" as C
participant "product: Product" as P
Client -> C : someOperation()
C -> C : factoryMethod()
C --> C : ConcreteProduct como Product
C -> P : operation()
P --> C : resultado
C --> Client : resultado final
@enduml
